@@ -63,6 +63,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       keys of menu_view_mimes() so that the names (not the MIME types) of
       file types are shown in the View menu (ZENOG)
     - Documentation of Padre::Current (SEWI)
+    - Include only changed files in changed-file-list (SEWI)
 
 0.66 2010.07.01
     - Improved the quality and integration of the default window size (ADAMK)
